# logistic

./: logistic_regression.py  pyproject.toml
logistic/: asgi.py  settings.py  urls.py  wsgi.py
